# personal-rag-assistant

./: .gitignore  personal-rag-spec.md  pyproject.toml
src/rag/: chunker.py  schemas.py
tests/unit/: test_chunker.py
