[project]
name = "personal-rag"
version = "0.1.0"
description = "Private, sourced, queryable knowledge base over your documents"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "anthropic>=0.49",
    "chromadb>=1.0",
    "fastapi>=0.115",
    "langfuse>=3.0",
    "openai>=1.68",
    "pypdf>=5.4",
    "pydantic>=2.10",
    "pydantic-settings>=2.8",
    "python-dotenv>=1.0",
    "sqlmodel>=0.0.24",
    "typer>=0.15",
    "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
local-embeddings = ["sentence-transformers>=3.4"]

[project.scripts]
rag = "rag.cli:app"

[dependency-groups]
dev = [
    "httpx>=0.28",
    "mypy>=1.15",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.14"
strict = true
mypy_path = "src"
packages = ["rag"]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["chromadb.*", "langfuse.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "TCH",
]

[tool.ruff.lint.isort]
known-first-party = ["rag"]
